# jaxson

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: notebook_example.ipynb  one.py
jaxson/: __init__.py  canvas.py  utils.py
