[tool.poetry]
name = "jaxson"
version = "0.1.6"
description = "A generative art libary based on Jax"
authors = ["Sam Corzine"]

[tool.poetry.dependencies]
python = "^3.7"
jax = "^0.2.24"
jaxlib = "^0.1.70"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
